# xstatic-dagre

./: README.txt  setup.cfg  setup.py
xstatic/pkg/dagre/: __init__.py
